Bagrut improvements, fixed issue

--- a/index.html
+++ b/index.html
@@ -66,29 +66,39 @@
                 <h1 class="yellow_title">השלמת בגרויות</h1>
             </div>
             <div layout="column" layout-align="center center" class="padded_content">
-                <p class="white_text text_content">
+                <h3 class="white_text text_content ">
                     השלמת בגרות במתמטיקה קיץ 2016
                     <br>
                     שני מסלולים ייחודים ללמידה לבגרות בזמן קצר ומקסימום תוצאות, קבוצות למידה קטנות בשיטה ייחודית.
-                </p>
-
-                <p class="white_text text_content" ng-show="bagrut_extra">
-                    מסלול שני המועדים (תחילת קורס 20.3) : למידה של 80 שעות עם טובי המורים בארץ פלוס מרתון לפני הבגרות עם
-                    גיא לקראת המועד המועד 23.5.2016. עם הזדמנות לגשת גם למועד הנוסף כ 7-שבועות אחרי המועד הראשון כאשר
-                    בוחרים את הציון הגבוה מבין שני המועדים.
-                    <br>
-                    במועד הקרוב הפתחו קבוצות ל-3 יחידות ו-4 יחידות
-                    <br><br>
-                    מסלול מועד ב' (תחילת קורס 1.4): למידה של 120 שעות עד למועד הבגרות השני עם טובי המורים פלוס מרתון עם
-                    גיא.
-                    <br>
-                    במועד הקרוב הפתחו קבוצות ל-3 יחידות, 4 יחידות ו-5 יחידות
-                    <br>
-                    מספר המקומות בכל קבוצה הוא 16 תלמידים
-                </p>
-
-                <div layout="row" layout-align="center start">
-                    <a href="" class="white_anchor read_more" ng-click="toggleBagrutExtra()">קרא עוד</a>
+                </h3>
+                <div layout="row">
+                    <div class="text_content red_background" flex="50" layout="column" layout-align="center center">
+                        <h2 class="white_text">
+                            מסלול שני המועדים <br>
+                            תחילת קורס 20.3
+                        </h2>
+                        <p class="white_text">
+                            למידה של 80 שעות עם טובי המורים בארץ פלוס מרתון לפני
+                            הבגרות עם
+                            גיא לקראת המועד המועד 23.5.2016. עם הזדמנות לגשת גם למועד הנוסף כ 7-שבועות אחרי המועד הראשון
+                            כאשר
+                            בוחרים את הציון הגבוה מבין שני המועדים.
+                            <br>
+                            במועד הקרוב הפתחו קבוצות ל-3 יחידות ו-4 יחידות
+                        </p>
+                    </div>
+                    <div class="text_content red_background" flex="50" layout="column" layout-align="center center">
+                        <h2 class="white_text">מסלול מועד ב'<br>
+                            תחילת קורס 1.4</h2>
+                        <p class="white_text">
+                            למידה של 120 שעות עד למועד הבגרות השני עם טובי המורים פלוס מרתון עם
+                            גיא.
+                            <br>
+                            במועד הקרוב הפתחו קבוצות ל-3 יחידות, 4 יחידות ו-5 יחידות
+                            <br>
+                            מספר המקומות בכל קבוצה הוא 16 תלמידים
+                        </p>
+                    </div>
                 </div>
             </div>
 
@@ -151,7 +161,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
 
         <div class="section gallery gray_background">
@@ -193,7 +202,7 @@
             </div>
             <div layout="row" layout-align="center center" class="padded_content">
                 <img src="img/school.png" style="padding-right: 5%">
-                <p style="width: 50%;padding-left: 5%" dir="rtl" >בית ספר להישגים הוקם
+                <p style="width: 50%;padding-left: 5%" dir="rtl">בית ספר להישגים הוקם
                     כמיזם סטארט-אפ חינוכי ע"י גיא קורן, אילן ורועי שר.
                     המיזם מציע לראשונה בישראל תוכניות ייחודיות המשלבת לימודים ופעילות גופנית.
                     הראשונה מבין התוכניות שבית הספר הישגים מציעה נקראת: "להצטיין בכל המגרשים"
@@ -207,7 +216,7 @@
     </div>
 
 
-    <md-button aria-label="info" class="md-fab md-warn fab" ng-click="showListBottomSheet()" >
+    <md-button aria-label="info" class="md-fab md-warn fab" ng-click="showListBottomSheet()">
         <md-icon md-svg-src="img/info.svg"></md-icon>
     </md-button>
 
