--- a/index.html
+++ b/index.html
@@ -200,17 +200,23 @@
             <div layout="column" layout-align="start center">
                 <h1 class="red_title">בית ספר להישגים</h1>
             </div>
-            <div layout="row" layout-align="center center" class="padded_content">
+
+            <md-content layout="row" layout-align="center center" class="padded_content">
+
                 <img src="img/school.png" style="padding-right: 5%">
-                <p style="width: 50%;padding-left: 5%" dir="rtl">בית ספר להישגים הוקם
+                <p style="width: 50%;padding-left: 5%;font-size: large" dir="rtl">בית ספר להישגים הוקם
                     כמיזם סטארט-אפ חינוכי ע"י גיא קורן, אילן ורועי שר.
+                    <br>
                     המיזם מציע לראשונה בישראל תוכניות ייחודיות המשלבת לימודים ופעילות גופנית.
+                    <br>
                     הראשונה מבין התוכניות שבית הספר הישגים מציעה נקראת: "להצטיין בכל המגרשים"
                     "לצטיין בכל המגרשים" - תוכנית לשעות הצהריים המותאמת לתלמידי יסודי במתחם בית הספר, התוכנית נותנת מענה
-                    בשלושה תחומים התורמים ומעצבים את הילד, חינוך לערכים, השכלה,כלים ללמידה ופעילות גופנית. הפעילות
+                    בשלושה תחומים התורמים ומעצבים את הילד, חינוך לערכים, השכלה,כלים ללמידה ופעילות גופנית.
+                    <br>
+                    הפעילות
                     מועברת ע"י מורים, מדריכים ומאמני ספורט מקצועיים.
                 </p>
-            </div>
+            </md-content>
 
         </div>
     </div>
