--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             </div>
         </div>
 
-        <div class="section bagrut red_background" style="margin-top: 0">
+        <div class="section bagrut  bluish_gray_background" style="margin-top: 0">
             <div layout="column" layout-align="start center">
-                <h1 class="yellow_title">השלמת בגרויות</h1>
+                <h1 class="white_text">השלמת בגרויות</h1>
             </div>
             <div layout="column" layout-align="center center" class="padded_content">
                 <h3 class="white_text text_content ">
@@ -72,7 +72,8 @@
                     שני מסלולים ייחודים ללמידה לבגרות בזמן קצר ומקסימום תוצאות, קבוצות למידה קטנות בשיטה ייחודית.
                 </h3>
                 <div layout="row">
-                    <div class="text_content red_background" flex="50" layout="column" layout-align="center center">
+                    <div class="text_content bluish_gray_background" flex="50" layout="column"
+                         layout-align="center center">
                         <h2 class="white_text">
                             מסלול שני המועדים <br>
                             תחילת קורס 20.3
@@ -87,7 +88,8 @@
                             במועד הקרוב הפתחו קבוצות ל-3 יחידות ו-4 יחידות
                         </p>
                     </div>
-                    <div class="text_content red_background" flex="50" layout="column" layout-align="center center">
+                    <div class="text_content bluish_gray_background" flex="50" layout="column"
+                         layout-align="center center">
                         <h2 class="white_text">מסלול מועד ב'<br>
                             תחילת קורס 1.4</h2>
                         <p class="white_text">
@@ -104,9 +106,9 @@
 
         </div>
 
-        <div class="section plans">
+        <div class="section plans red_background">
             <div layout="column" layout-align="end center">
-                <h1 style=" color: #8B8E90">תוכנית לחטיבה ותיכון</h1>
+                <h1 class="yellow_title">תוכנית לחטיבה ותיכון</h1>
             </div>
             <div layout="row" layout-align="center start">
                 <div style="width: 80%">
