Align text right-er

--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@
                 <h1 class="red_title">בית ספר להישגים</h1>
             </div>
 
-            <md-content layout="row" layout-align="center center" class="padded_content">
+            <md-content layout="row" layout-align="center center" >
 
-                <img src="img/school.png" style="padding-right: 5%">
-                <p style="width: 50%;padding-left: 5%;font-size: large" dir="rtl">בית ספר להישגים הוקם
+                <img src="img/school.png" style="padding-right: 6%">
+                <p style="width: 50%;padding-left: 6%;font-size: large" dir="rtl">בית ספר להישגים הוקם
                     כמיזם סטארט-אפ חינוכי ע"י גיא קורן, אילן ורועי שר.
                     <br>
                     המיזם מציע לראשונה בישראל תוכניות ייחודיות המשלבת לימודים ופעילות גופנית.
