--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div layout="row">
 
                     <div class="text_content bluish_gray_background" flex="50" layout="column"
-                         layout-align="center center">
+                         layout-align="start center">
                         <h2 class="white_text">מסלול מועד ב'<br>
                             תחילת קורס 1.4</h2>
                         <p class="white_text">
@@ -89,7 +89,7 @@
                         </p>
                     </div>
                     <div class="text_content bluish_gray_background" flex="50" layout="column"
-                         layout-align="center center">
+                         layout-align="start center">
                         <h2 class="white_text">
                             מסלול שני המועדים <br>
                             תחילת קורס 20.3
