Center align text in icons

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             <md-icon ng-show="bigScreen" md-svg-src="img/{{plan.icon}}.svg" style="color: #ffffff;"
                                      class="plans_item_img"></md-icon>
                             <md-grid-tile-footer layout-align="center center">
-                                <h2>{{plan.text}}</h2>
+                                <h2 align="center">{{plan.text}}</h2>
                             </md-grid-tile-footer>
                         </md-grid-tile>
                     </md-grid-list>
@@ -156,7 +156,7 @@
                                          class="plans_item_img"></md-icon>
                             </div>
                             <md-grid-tile-footer layout-align="center center">
-                                <h2>{{plan.text}}</h2>
+                                <h2 align="center">{{plan.text}}</h2>
                             </md-grid-tile-footer>
                         </md-grid-tile>
                     </md-grid-list>
