Hide footer on mobile

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
         </div>
     </div>
-    <footer ></footer>
+    <footer ng-show="bigScreen"></footer>
 
 
     <md-button aria-label="info" class="md-fab md-warn fab" ng-click="showListBottomSheet()">
