--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 
         </div>
 
+
         <div class="section plans red_background">
             <div layout="column" layout-align="end center">
                 <h1 class="yellow_title">תוכנית לחטיבה ותיכון</h1>
@@ -189,6 +190,35 @@
                     <md-icon md-svg-src="img/arrow-left.svg"></md-icon>
                 </md-button>
             </div>
+        </div>
+        <div class="section fasttest  blue_background" style="margin-top: 0">
+            <div layout="column" layout-align="start center">
+                <h1 class="yellow_title">Fasttest</h1>
+            </div>
+            <div layout="column" layout-align="center center" class="padded_content">
+                <md-content class="blue_background">
+                    <p class="white_text " dir="rtl">
+                        Fastest- אתר לבניית דפי סימולציה ממוקדים במתמטיקה מקצועות נוספים לתרגול.
+                    </p>
+                    <p class="white_text " dir="rtl">
+                        מורים ותלמידים
+                    </p>
+                    <p class="white_text " dir="rtl">
+                        לראשונה ניתן לבנות במהירות דפי תירגול ממוקדים ע"פ נושאים לבחירה או דף סימולציה לפני בחינה עם
+                        הנושאי
+                    </p>
+                    <p class="white_text " dir="rtl">
+                        הבחינה. עם פתרונות סופים ע"פ הצורך
+                    </p>
+                    <p class="white_text " dir="rtl">
+                        באתר ניתן למצוא תרגילים ברמות שנות .
+                    </p>
+                    <p class="white_text " dir="rtl">
+                        לחצו <a class="black_anchor" style="color: red" href="http://www.fasttest.co.il/">כאן</a> לעבור לאתר והתחילו לתרגל.
+                    </p>
+                </md-content>
+            </div>
+
         </div>
 
         <div class="section stuff red_background">
