--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <h1 class="yellow_title">Fasttest</h1>
             </div>
             <div layout="column" layout-align="center center" class="padded_content">
-                <md-content class="blue_background">
+                <md-content class="blue_background fasttest-wrapper" >
                     <p class="white_text " dir="rtl">
                         Fastest- אתר לבניית דפי סימולציה ממוקדים במתמטיקה מקצועות נוספים לתרגול.
                     </p>
