--- a/index.html
+++ b/index.html
@@ -68,46 +68,18 @@
             <div layout="column" layout-align="start center">
                 <h1 class="white_text">השלמת בגרויות</h1>
             </div>
-            <div layout="column" layout-align="center center" class="padded_content">
-                <h3 class="white_text text_content ">
-                    השלמת בגרות במתמטיקה קיץ 2016
+            <div layout-align="center end" class="padded_content">
+                <h2 class="white_text" align="right" style="text-decoration: underline;padding-bottom: 0">
+                    תחילת קורס 1.4
+                </h2>
+                <p dir="rtl" class="white_text" layout layout-align="start start" align="right" style="padding-top: 0">  למידה של 120 שעות עד למועד הבגרות השני עם טובי המורים פלוס מרתון עם
+                    גיא.
                     <br>
-                    שני מסלולים ייחודים ללמידה לבגרות בזמן קצר ומקסימום תוצאות, קבוצות למידה קטנות בשיטה ייחודית.
-                </h3>
-                <div layout="row">
-
-                    <div class="text_content bluish_gray_background" flex="50" layout="column"
-                         layout-align="start center">
-                        <h2 class="white_text">מסלול מועד ב'<br>
-                            תחילת קורס 1.4</h2>
-                        <p class="white_text">
-                            למידה של 120 שעות עד למועד הבגרות השני עם טובי המורים פלוס מרתון עם
-                            גיא.
-                            <br>
-                            במועד הקרוב הפתחו קבוצות ל-3 יחידות, 4 יחידות ו-5 יחידות
-                            <br>
-                            מספר המקומות בכל קבוצה הוא 16 תלמידים
-                        </p>
-                    </div>
-                    <div class="text_content bluish_gray_background" flex="50" layout="column"
-                         layout-align="start center">
-                        <h2 class="white_text">
-                            מסלול שני המועדים <br>
-                            תחילת קורס 20.3
-                        </h2>
-                        <p class="white_text">
-                            למידה של 80 שעות עם טובי המורים בארץ פלוס מרתון לפני
-                            הבגרות עם
-                            גיא לקראת המועד המועד 23.5.2016. עם הזדמנות לגשת גם למועד הנוסף כ 7-שבועות אחרי המועד הראשון
-                            כאשר
-                            בוחרים את הציון הגבוה מבין שני המועדים.
-                            <br>
-                            במועד הקרוב הפתחו קבוצות ל-3 יחידות ו-4 יחידות
-                        </p>
-                    </div>
-                </div>
+                    במועד הקרוב הפתחו קבוצות ל-3 יחידות, 4 יחידות ו-5 יחידות
+                    <br>
+                    מספר המקומות בכל קבוצה הוא 16 תלמידים
+                </p>
             </div>
-
         </div>
 
 
@@ -196,7 +168,7 @@
                 <h1 class="yellow_title">Fasttest</h1>
             </div>
             <div layout="column" layout-align="center center" class="padded_content">
-                <md-content class="blue_background fasttest-wrapper" >
+                <md-content class="blue_background fasttest-wrapper">
                     <p class="white_text " dir="rtl">
                         Fastest- אתר לבניית דפי סימולציה ממוקדים במתמטיקה מקצועות נוספים לתרגול.
                     </p>
@@ -214,7 +186,8 @@
                         באתר ניתן למצוא תרגילים ברמות שנות .
                     </p>
                     <p class="white_text " dir="rtl">
-                        לחצו <a class="black_anchor" style="color: red" href="http://www.fasttest.co.il/">כאן</a> לעבור לאתר והתחילו לתרגל.
+                        לחצו <a class="black_anchor" style="color: red" href="http://www.fasttest.co.il/">כאן</a> לעבור
+                        לאתר והתחילו לתרגל.
                     </p>
                 </md-content>
             </div>
