--- a/directives/footer/footer.html
+++ b/directives/footer/footer.html
@@ -1,6 +1,6 @@
 <div class="footer-wrapper section md-whiteframe-10dp" ng-controller="FooterController" layout="row" layout-align="center start">
-    <div layout="column" ng-repeat="school in map" layout-align="start center">
-        <md-list>
+    <div layout="column" ng-repeat="school in map" layout-align="start center" flex="22">
+        <md-list >
             <md-subheader align="center">
                 {{school.title}}
             </md-subheader>
