--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Guy Koren</title>
+    <title>גיא קורן</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
     <link rel="stylesheet" href="styles/main.css">
@@ -10,7 +10,7 @@
     <link rel="icon"
           type="image/png"
           href="img/logo.png">
-
+    <meta name="Description" CONTENT="מרכזי למידה - גיא קורן">
 </head>
 <body ng-app="GuyKoren" ng-controller="AppController">
 
@@ -256,6 +256,16 @@
 <script src="directives/bar/bar.js"></script>
 <script src="directives/footer/footer.js"></script>
 <script src="directives/basic-page/BasicPage.js"></script>
+<!-- Google Analytics -->
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+    ga('create', 'UA-49660514-9', 'auto');
+    ga('send', 'pageview');
+</script>
+<!-- End Google Analytics -->
 </body>
 </html>
