Added - in braunches

--- a/index.html
+++ b/index.html
@@ -59,26 +59,37 @@
                 <div ng-class="{'branches_wrapper_big_screen' : bigScreen}">
                     <h3 ng-repeat="braunch in braunches" class="no_margins_h3"
                         ng-class="{'braunch_title':braunch.title}">
-                        {{braunch.text}}</h3>
+                        <span ng-show="!braunch.title">- </span>{{braunch.text}}</h3>
                 </div>
             </div>
         </div>
 
         <div class="section bagrut  bluish_gray_background" style="margin-top: 0">
             <div layout="column" layout-align="start center">
-                <h1 class="white_text">השלמת בגרויות במתמטיקה קיץ 2016</h1>
+                <h1 align="center" class="white_text">קורסי השלמת בגרויות בגיא קורן Academy</h1>
             </div>
             <div layout-align="center end" class="padded_content">
                 <h2 class="white_text" align="right" style="text-decoration: underline;padding-bottom: 0">
-                    תחילת קורס 15.4
+                    קורס השלמה במתמטיקה ל 3-4-5 יחידות
                 </h2>
                 <p dir="rtl" class="white_text" layout layout-align="start start" align="right" style="padding-top: 0">
-                    למידה של 120 שעות עד למועד הבגרות השני עם טובי המורים פלוס מרתון עם
-                    גיא.
+                    הבגרות במתמטיקה נחשבת לבגרות המאתגרת ביותר ולשם כך דרושים:
+                    מורים מקצועיים בעלי סבלנות וניסיון שניתן להתחבר אליהם בקלות
+                    חומרי למידה מסודרים, עם הסברים אינטואיטיביים ופשוטים המציגים את החומר הנלמד בצורה פשוטה ומאגר
+                    תרגילים מדורג בכל נושא עד לרמת שאלות בגרות ומבחנים לדוגמה.
+                    קבוצות למידה קטנות אשר מאפשרות למורה לתת יחס אישי ועם זאת מקנות כלים ללמידה עצמאית וקבוצתית וסביבת
+                    לימוד נעימה.
                     <br>
-                    במועד הקרוב הפתחו קבוצות ל-3 יחידות, 4 יחידות ו-5 יחידות
+                    את כל זה תכלו למצוא אצלנו ויותר
+                    מורים הטובים ומקצועיים ביותר, בעלי סבלנות וזמינות עם רצון עז ללמד.
+                    ספרי למידה שפתחו ע״י גיא מתוך ניסיון של שנים ומפגש עם אלפי תלמידים.
+                    אתר fastest - המאפשר בניית מבחני סימולציה בצורה פשוטה.
+                    קבוצות למידה של עד 16 תלמידים
+                    מרכז שקט וטכנולוגי.
                     <br>
-                    מספר המקומות בכל קבוצה הוא 16 תלמידים
+                    בנוסף גם תכלו לקבל יעוץ וחוונה בבחירת רמת הלימוד תוך הסתכלות על דרישות אקדמיות, מבחן יכולת וזמינות
+                    להשקיע בלמידה.
+                    <br>
                 </p>
             </div>
         </div>
