Added to Aschool

--- a/index.html
+++ b/index.html
@@ -227,26 +227,62 @@
             </div>
         </div>
 
-        <div class="section school " style="overflow: hidden">
+        <div class="section school" style="overflow: hidden">
             <div layout="column" layout-align="start center">
                 <h1 class="red_title">בית ספר להישגים</h1>
             </div>
 
-            <md-content layout="row" layout-align="center center">
+            <md-content layout="column" layout-gt-sm="row" layout-align="center start">
 
                 <img src="img/school.png" style="padding-right: 6%">
-                <p style="width: 50%;padding-left: 6%;font-size: large" dir="rtl">בית ספר להישגים הוקם
-                    כמיזם סטארט-אפ חינוכי ע"י גיא קורן, אילן ורועי שר.
+                <p ng-style="bigScreen ? {'width': '50%'}:{'width': '85%','text-align': 'center'}"
+                   style="direction:rtl; padding-left: 6%;font-size: large">
+                    <b> בית ספר להישגים </b>הוקם כמיזם סטארט-אפ חינוכי ע"י גיא קורן, אילן ורועי שר.<br>
+                    המיזם מציע לראשונה בישראל תוכניות ייחודיות המשלבת לימודים ופעילות גופנית.<br>
+                    הראשונה מבין התוכניות שבית הספר הישגים מציעה נקראת: "להצטיין בכל המגרשים"<br>
                     <br>
-                    המיזם מציע לראשונה בישראל תוכניות ייחודיות המשלבת לימודים ופעילות גופנית.
-                    <br>
-                    הראשונה מבין התוכניות שבית הספר הישגים מציעה נקראת: "להצטיין בכל המגרשים"
-                    "לצטיין בכל המגרשים" - תוכנית לשעות הצהריים המותאמת לתלמידי יסודי במתחם בית הספר, התוכנית נותנת מענה
-                    בשלושה תחומים התורמים ומעצבים את הילד, חינוך לערכים, השכלה,כלים ללמידה ופעילות גופנית.
-                    <br>
-                    הפעילות
-                    מועברת ע"י מורים, מדריכים ומאמני ספורט מקצועיים.
+                    <b>"להצטיין בכל המגרשים"</b>
+                    - תוכנית לשעות הצהריים המותאמת לתלמידי יסודי (לכיתות א'-ו') במתחם בית הספר,
+                    התוכנית נותנת מענה בשלושה תחומים התורמים ומעצבים את הילד, חינוך לערכים, כלים ללמידה-יזמות ופעילות
+                    גופנית. הפעילות מועברת ע"י מורים, מדריכים ומאמני ספורט מקצועיים. חשוב לציין שהפעילות נותנת אפשרות
+                    להורים רבים לקדם עצמם מבחינה אישית<br><br>
+
+                    <b>רישום ופרטים</b><br>
+                    ההרשמה לפעילות קיץ 2016 ולפעילות השניתית 2016-17 תחל : 15.4.2016. הנרשים על 15.5.16 יזכו
+                    להנחה.<br><br>
+                    <b>לפרטים והרשמה צור קשר עם שני 0545538710 או בפייסבוק בית ספר הישגים.</b><br>
+                    *התוכנית היא מודולרית ולכן ניתן להירשם רק לחלק מסוים (חשבון, אנגלית, טניס, ריקוד, כדורגל וכדורסל)
+                    מועברת ע"י מורים, מדריכים ומאמני ספורט מקצועיים.<br><br>
+                    <a href="" class="black_anchor read_more" ng-click="toggleASchoolExtra()">קרא עוד</a>
+
+                <span ng-show="aSchool_extra">
+                    <br><br>
+                    <b>על התוכנית "להצטיין בכל המגרשים"</b>
+                    את הפיילוט הראשון לתוכנית התחלנו בבית ספר המגינים בחולון, בשיתוף פעולה עם מנהלת בית הספר הפך הפיילוט להצלחה.
+<br><br>
+                    <b style="text-underline: wave">עקרי התוכנית.</b>
+<br><br>
+                    <b>התוכנית בין היתר מציעה חוגי ספורט שונים:</b>
+                    טניס, ריקוד, כדורגל, כדורסל ועוד. אנו מנסים לשמש כקרש קפיצה לספורטיים המצטיינים בתוכנית לאגודות ספורט שונות בארץ, תוך מתן דגש על הפעילות הלימודית של הילד.
+<br><br>
+                    <b>בתחום הלמידה זוכים משתתפים לשיעורי למידה של מקצעות החשבון והאנגלית</b>
+                    ע"י מורים מקצועים וסבלנים אשר מקנים למשתתפים כלים ללמידה עצמאית וקבוצתית ומעודדים יזמות וחשיבה. חשוב לציין שאנו בקשר רצוף עם הורי מורי התלמיד.
+<br><br>
+                    <b>בנוסף פועל מרכז למידה בשעות הצהריים (סיום הלימודים ועד 16:30)</b>
+                    , המרכז את התלמידים אליו וצוות ההדרכה הכולל מדריך לימודי מסור אשר נותן תמיכה בשעורי הבית, ומדריך ספורטיבי סבלני אשר מעביר פעילויות ספורטיויות מגוונות אשר מאפשרות לכל תלמיד לבלוט.
+                    מרכז הלמידה מציע גם פעילויות ייחודיות: סדנת חשיבה ואסטרטגיה, סדנת אזרחות טובה עם שופט בית משפט מחוזי בדימוס וסדנאות יצירה שונות.
+<br><br>
+                    במהלך השנה אנו נתקלים במשתתפים בתוכנית אשר
+                    <b>מאמצים ערכים של הישגיות בלימודים דרך הספורט.</b>
+                    בעקבות פעילות ספורטיוית מגוונת, משתתפים בתוכנית שאינם היו מתחברים לפעילות ספורטיוית מוצאים עצמם פעיים מעוד וגם נהנים.
+<br><br>
+                    כמובן שהפעילות נמשכת גם בחגים ובחופשת הקיץ ופועלת משעות הבוקר ועד הצהריים.
+
+                </span>
+
                 </p>
+
+
             </md-content>
 
         </div>
@@ -254,10 +290,12 @@
     <basic-page class="content md-whiteframe-16dp animated slideInUp" ng-show="location.path() == '/material'"
                 ng-style="bigScreen ? {'margin-top': '22vh'}:{'margin-top': '0'}"></basic-page>
     <footer ng-show="bigScreen"></footer>
+
     <md-button aria-label="info" class="md-fab md-warn fab" ng-click="showListBottomSheet()">
         <md-icon md-svg-src="img/info.svg"></md-icon>
     </md-button>
 </div>
+
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-aria/angular-aria.js"></script>
 <script src="bower_components/angular-animate/angular-animate.js"></script>
