--- a/directives/footer/footer.html
+++ b/directives/footer/footer.html
@@ -1,12 +1,24 @@
-<div class="footer-wrapper section md-whiteframe-10dp" ng-controller="FooterController" layout="row" layout-align="center start">
-    <div layout="column" ng-repeat="school in map" layout-align="start center" flex="30">
-        <md-list >
-            <md-subheader align="center">
-                {{school.title}}
-            </md-subheader>
-            <md-list-item ng-repeat="option in school.options" layout layout-align="center">
-                <a href="" style="color: black;     text-decoration: none;"><h4 align="center">{{option.text}}</h4></a>
-            </md-list-item>
-        </md-list>
+<div class="footer-wrapper section md-whiteframe-10dp" >
+
+    <div ng-controller="FooterController" layout="row" layout-align="center start">
+        <div layout="column" ng-repeat="school in map" layout-align="start center" flex="30">
+            <md-list >
+                <md-subheader align="center">
+                    {{school.title}}
+                </md-subheader>
+                <md-list-item ng-repeat="option in school.options" layout layout-align="center">
+                    <a href="" style="color: black;     text-decoration: none;"><h4 align="center">{{option.text}}</h4></a>
+                </md-list-item>
+            </md-list>
+        </div>
     </div>
+    <md-content layout="row" style="padding-left: 3%;padding-right: 3%">
+        <p align="left" flex="50">
+            Created by Tomer Rosenfeld (rosenpin@Github)
+            tomer.rosenfeld@yahoo.com
+        </p>
+        <p align="right" flex="50">
+            Terms & Conditions Privacy Policy @2016 Guy Koren
+        </p>
+    </md-content>
 </div>
