--- a/index.html
+++ b/index.html
@@ -232,10 +232,9 @@
                 <h1 class="red_title">בית ספר להישגים</h1>
             </div>
 
-            <md-content layout="column" layout-gt-sm="row" layout-align="center start">
-
-                <img src="img/school.png" style="padding-right: 6%">
-                <p ng-style="bigScreen ? {'width': '50%'}:{'width': '85%','text-align': 'center'}"
+            <md-content style="width: 80%; padding-right: 10%;padding-left: 10%">
+                <img src="img/school.png" style="padding-right: 6%; width: 15%;float: left;">
+                <p
                    style="direction:rtl; padding-left: 6%;font-size: large">
                     <b> בית ספר להישגים </b>הוקם כמיזם סטארט-אפ חינוכי ע"י גיא קורן, אילן ורועי שר.<br>
                     המיזם מציע לראשונה בישראל תוכניות ייחודיות המשלבת לימודים ופעילות גופנית.<br>
