Added fastest content

--- a/index.html
+++ b/index.html
@@ -185,22 +185,37 @@
                         Fastest- אתר לבניית דפי סימולציה ממוקדים במתמטיקה מקצועות נוספים לתרגול.
                     </p>
                     <p class="white_text " dir="rtl">
-                        מורים ותלמידים
+                        אתר לבניית דפי סימולציה ממוקדים במתמטיקה מקצועות נוספים לתרגול.
+
+                        <b>מורים ותלמידים</b>
+                        לראשונה בישראל אתר המציע חווית למידה ותירגול ייחודית.<br>
+                        בפועל, בנייה פשוטה ומהירה של דפי עבודה ומבחני סימולציה במתמטיקה ומקצעות נוספים לרמת חטיבה ותיכון
+                        (כולל רמת בגרות)<br>
+                        אתר מאפשר במהלך הבנייה, בחירה של מקוצע הלמידה, רמת הלימוד, ונושאים ספציפים.
+                        דפי העבודה והמבחנים מוצגים בצורה נוחה נותנים אפשרות ללמוד בכל מקום וכמובן כוללים פתרונות (לחלק
+                        מהתרגילים גם פתרוות מלאים).
                     </p>
                     <p class="white_text " dir="rtl">
-                        לראשונה ניתן לבנות במהירות דפי תירגול ממוקדים ע"פ נושאים לבחירה או דף סימולציה לפני בחינה עם
-                        הנושאי
+                        הכנסו עכשיו והתחילו לתרגל
+                        <a href="http://fasttest.co.il/">fasttest.co.il</a>
                     </p>
-                    <p class="white_text " dir="rtl">
-                        הבחינה. עם פתרונות סופים ע"פ הצורך
+                    <p  class="white_text " dir="rtl" ng-show="fastest_extra">
+                        FasTest למעשה בא לתת מענה לקשיים של מורים ותלמידים רבים.
+                        <br>
+                        כל מורה מכיר את הקושי ולחץ בבניית מבחן, את הקושי מתן שעורי בית מתוך ספר למידה עמוס בתרגילים
+                        באתר ניתן לבחור את מספר התרגילים, הנושאים, ורמת הקושי מאפשר הדפסה מהירה וכמובן מציע את הפתרונות לתרגילים.
+                        <br>
+                        <br>
+                        בתור תלמיד כל אחד מכיר את התחושה הלא בטוחה, כיצד המבחן עומד להראות, מהיכן לתרגל ואיך אני אספיק לפתור את כל הבחינה בזמן כל כך קצר.
+                        <br>
+                        Fastest מאפשר לבנות דף תירגול ע"פ נושא אחד בלבד, כך שניתן לעבוד על נושא מסויים. כמו כן גם מאפשר לבנות מבחן סימולצה המאפשר הכנה מדוייקת ע"פ נושאי הבחינה ותיכנון זמן נכון.
+                        <br><br>
+
+                        בהצלחה במחן הקרוב
                     </p>
-                    <p class="white_text " dir="rtl">
-                        באתר ניתן למצוא תרגילים ברמות שנות .
-                    </p>
-                    <p class="white_text " dir="rtl">
-                        לחצו <a class="black_anchor" style="color: red" href="http://www.fasttest.co.il/">כאן</a> לעבור
-                        לאתר והתחילו לתרגל.
-                    </p>
+
+                    <a dir="rtl" href="" class="white_text read_more" ng-click="toggleFastestExtra()">קרא עוד</a>
+
                 </md-content>
             </div>
 
@@ -235,7 +250,7 @@
             <md-content style="width: 80%; padding-right: 10%;padding-left: 10%">
                 <img src="img/school.png" style="padding-right: 6%; width: 15%;float: left;">
                 <p
-                   style="direction:rtl; padding-left: 6%;font-size: large">
+                        style="direction:rtl; padding-left: 6%;font-size: large">
                     <b> בית ספר להישגים </b>הוקם כמיזם סטארט-אפ חינוכי ע"י גיא קורן, אילן ורועי שר.<br>
                     המיזם מציע לראשונה בישראל תוכניות ייחודיות המשלבת לימודים ופעילות גופנית.<br>
                     הראשונה מבין התוכניות שבית הספר הישגים מציעה נקראת: "להצטיין בכל המגרשים"<br>
@@ -251,8 +266,7 @@
                     להנחה.<br><br>
                     <b>לפרטים והרשמה צור קשר עם שני 0545538710 או בפייסבוק בית ספר הישגים.</b><br>
                     *התוכנית היא מודולרית ולכן ניתן להירשם רק לחלק מסוים (חשבון, אנגלית, טניס, ריקוד, כדורגל וכדורסל)
-                    מועברת ע"י מורים, מדריכים ומאמני ספורט מקצועיים.<br><br>
-                    <a href="" class="black_anchor read_more" ng-click="toggleASchoolExtra()">קרא עוד</a>
+                    מועברת ע"י מורים, מדריכים ומאמני ספורט מקצועיים.
 
                 <span ng-show="aSchool_extra">
                     <br><br>
@@ -277,7 +291,8 @@
 <br><br>
                     כמובן שהפעילות נמשכת גם בחגים ובחופשת הקיץ ופועלת משעות הבוקר ועד הצהריים.
 
-                </span>
+                </span><br><br>
+                    <a href="" class="black_anchor read_more" ng-click="toggleASchoolExtra()">קרא עוד</a>
 
                 </p>
 
